# lafc-dev-test

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/src/: web_app.py
app/static/styles/: styles.css
app/templates/: header.html  index.html  part1.html
app/tests/: test_answers.py
db/: Dockerfile
db/init/: extract_and_seed.sh
db/migrations/: seed.sql  tables.sql  views.sql
db/seed/: seed.sql
jupyter/: Dockerfile
jupyter/notebooks/: part2.ipynb
