[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lafc-web-app"
version = "0.0.1"
description = "A simple web app to display LAFC assignment answers."
authors = ["James Bescos <jamesbescos@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-sqlalchemy = "^3.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-flask = "^1.2"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
